# DSEAtemplate

./: .gitignore  CMakeLists.txt  README.md  dsea.cpp  dsea.h  dsea_block.cpp  dsea_case.h  dsea_gpu.cpp  dsea_input.cpp  dsea_input_ucx.cpp  dsea_kernel.cu  dsea_main.cpp  dsea_output.cpp  dsea_output_ucx.cpp  dsea_storage.cpp  dsea_store_input.cpp  dsea_store_output.cpp  main.cpp
src/: quad_simple.h  ucx_mr_aux.h  ucx_mr_cleanup.h  ucx_mr_recv.h  ucx_mr_send.h  ucx_mr_setup.h  ucx_mr_sock_comm.h  ucx_mr_sock_rte.h  ucx_mr_types.h  ucx_mr_wait.h  ucx_multirail.h
src/mr_benchmark/: ucx_mr_bench.h  ucx_mr_bench_comm.h  ucx_mr_bench_memory.h  ucx_mr_bench_setup.h  ucx_mr_bench_types.h
